k8s/delete-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-microservice
  labels:
    app: delete-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-microservice
  template:
    metadata:
      labels:
        app: delete-microservice
    spec:
      containers:
        - name: delete-microservice
          image: xagh/agiraldog-parcial3-electiva5-delete-ms:latest
          ports:
            - containerPort: 8084
