k8s/get-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-microservice
  labels:
    app: get-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-microservice
  template:
    metadata:
      labels:
        app: get-microservice
    spec:
      containers:
        - name: get-microservice
          image: 'xagh/agiraldog-parcial3-electiva5-get-ms:latest'
          ports:
            - containerPort: 8081
