k8s/patch-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patch-microservice
  labels:
    app: patch-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patch-microservice
  template:
    metadata:
      labels:
        app: patch-microservice
    spec:
      containers:
        - name: patch-microservice
          image: xagh/agiraldog-parcial3-electiva5-patch-ms:latest
          ports:
            - containerPort: 8083
