k8s/post-ms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-microservice
  labels:
    app: post-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-microservice
  template:
    metadata:
      labels:
        app: post-microservice
    spec:
      containers:
        - name: post-microservice
          image: xagh/agiraldog-parcial3-electiva5-post-ms:latest
          ports:
            - containerPort: 8082
