k8s/delete-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-microservice-service
spec:
  selector:
    app: delete-microservice
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
