k8s/get-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-microservice-service
spec:
  selector:
    app: get-microservice
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
