k8s/mariadb-services.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  type: NodePort
  selector:
    app: mariadb
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
      nodePort: 32000
