k8s/patch-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patch-microservice-service
spec:
  selector:
    app: patch-microservice
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
