k8s/post-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-microservice-service
spec:
  selector:
    app: post-microservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
